--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <body>
     <h1>Tic Tac Toe Game</h1>
     <div id="wrapper">
-      <div class="player-1 active">Игрок 1</div>
-      <div class="player-2">Игрок 2</div>
-       <div id="btn-container">
-        <!-- <div id="btn-new">New Game</div> -->
-       </div>
+      <div class="player-1 active"><!--Игрок 1--></div>
+      <div class="player-2"><!--Игрок 2--></div>
+       <!-- <div id="btn-container">-->
+       <!--<div id="btn-new">New Game</div> -->
+       <!--</div>  -->
        <div id = container>
            <div class = "cell" id="cell1"></div>
            <div class = "cell" id="cell2"></div>
